--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "url": "git+https://github.com/gunnargrosch/failure-cloudfunctions.git"
   },
   "keywords": [
-    "aws",
-    "lambda",
+    "gcp",
+    "cloudfunctions",
     "failure",
     "injection",
     "chaos",
@@ -33,6 +33,7 @@
     "eslint-plugin-standard": "^4.0.1"
   },
   "dependencies": {
+    "@google-cloud/secret-manager": "^2.0.0",
     "mitm": "^1.7.0"
   }
 }
